# SimpleSpaceI

./: CMakeLists.txt
compiler/lib/cmake/SDL2/: SDL2mainTargets.cmake  SDL2staticTargets.cmake
compiler/lib/gcc/x86_64-w64-mingw32/13.2.0/adalib/: a-direct.ali  g-expect.ali  g-exptty.ali  g-sercom.ali  g-soccon.ali  g-socket.ali  g-socpol.ali  g-socthi.ali  g-soliop.ali  g-sothco.ali  g-spogwa.ali  s-filatt.ali  s-oscons.ali  s-tadeca.ali
compiler/lib/pkgconfig/: libpkgconf.pc  sdl2.pc  vulkan.pc
compiler/lib/python3.11/: _sysconfigdata__win32_.py
compiler/share/cmake/VulkanHeaders/: VulkanHeadersConfigVersion.cmake  VulkanHeadersTargets.cmake
include/: bullet.h  button.h  command.h  constant.h  enemy.h  game.h  game_logic.h  game_object.h  game_object_factory.h  input_handler.h  logger.h  player.h  shield.h  timer.h
src/: bullet.cpp  button.cpp  command.cpp  enemy.cpp  game.cpp  game_logic.cpp  game_object.cpp  game_object_factory.cpp  input_handler.cpp  logger.cpp  main.cpp  player.cpp  shield.cpp  timer.cpp
